--- a/app/src/main/resources/site/pages/user/games/gm/gameBlocksComp.html
+++ b/app/src/main/resources/site/pages/user/games/gm/gameBlocksComp.html
@@ -1,28 +1,29 @@
 <div class="my_games-game_block-list">
     <div data-th-each="block : ${blocks}">
-        <input type="radio" name="game_block" data-th-attr="data-id=${block._id}" data-th-id="${block._id}"
-            value="Фэнтези" hidden>
-        <label data-th-for="${block._id}" class="my_games-game_block-item label-radio js-my_games-game_block-item">
+        <input type="radio" name="game_block" data-th-attr="data-id=${block.content._id}"
+            data-th-id="${block.content._id}" value="Фэнтези" hidden>
+        <label data-th-for="${block.content._id}"
+            class="my_games-game_block-item label-radio js-my_games-game_block-item">
             <div class="my_games-game_block-item-top">
-                <span data-th-if="${block.time.end}" class="my_games-game_block-time"
-                    data-th-text="${block.time.start + ' - ' + block.time.end + ' MSK'}"></span>
-                <span data-th-unless="${block.time.end}" class="my_games-game_block-time"
-                    data-th-text="${block.time.start + ' MSK'}"></span>
-                <span data-th-if="${block.time.end}" class="my_games-game_block-duration">
-                    <span data-th-if="${block.duration.hours > 0}"
-                        data-th-text="${block.duration.hours+portal.localize({'_key=myGames.misc.time.h', '_locale=ru'})}"></span>
-                    <span data-th-if="${block.duration.minutes > 0}"
-                        data-th-text="${block.duration.minutes+portal.localize({'_key=myGames.misc.time.m', '_locale=ru'})}"></span>
+                <span data-th-if="${block.processed.time.end}" class="my_games-game_block-time"
+                    data-th-text="${block.processed.time.start + ' - ' + block.processed.time.end + ' MSK'}"></span>
+                <span data-th-unless="${block.processed.time.end}" class="my_games-game_block-time"
+                    data-th-text="${block.processed.time.start + ' MSK'}"></span>
+                <span data-th-if="${block.processed.time.end}" class="my_games-game_block-duration">
+                    <span data-th-if="${block.processed.duration.hours > 0}"
+                        data-th-text="${block.processed.duration.hours+portal.localize({'_key=myGames.misc.time.h', '_locale=ru'})}"></span>
+                    <span data-th-if="${block.processed.duration.minutes > 0}"
+                        data-th-text="${block.processed.duration.minutes+portal.localize({'_key=myGames.misc.time.m', '_locale=ru'})}"></span>
                 </span>
                 <span class="my_games-game_block-table_slot">
                     <span data-th-if="${festival && festival.online}"
-                        data-th-text="${portal.localize({'_key=myGames.games.total', '_locale=ru'}) + ': ' + block.space.reserved}"></span>
+                        data-th-text="${portal.localize({'_key=myGames.games.total', '_locale=ru'}) + ': ' + block.processed.space.reserved}"></span>
                     <span data-th-unless="${festival && festival.online}"
-                        data-th-text="${block.space.reserved + '/' + block.space.total}"></span>
+                        data-th-text="${block.processed.space.reserved + '/' + block.processed.space.total}"></span>
                 </span>
             </div>
             <div class="my_games-game_block-item-bottom">
-                <span class="my_games-game_block-name" data-th-text="${block.displayName}"></span>
+                <span class="my_games-game_block-name" data-th-text="${block.content.displayName}"></span>
             </div>
         </label>
     </div>
