--- a/app/src/main/resources/site/pages/user/games/shared/availableComp.html
+++ b/app/src/main/resources/site/pages/user/games/shared/availableComp.html
@@ -1,35 +1,38 @@
 <div class="my_games-available-list js-my_games-available-list" data-th-if="${games.size > 0}">
-    <div data-th-each="game : ${games}" data-th-attr="data-id=${game._id}"
+    <div data-th-each="game : ${games}" data-th-attr="data-id=${game.content._id}"
         class="my_games-available-item js-my_games-available-item">
         <div class="my_games-short_info js-my_games-available-short_info">
             <div class="my_games-short_info-left">
-                <div data-th-unless="${game.block.time.end}" class="my_games-short_info-time"
-                    data-th-text="${game.block.time.start}"></div>
-                <div data-th-if="${game.block.time.end}" class="my_games-short_info-time"
-                    data-th-text="${game.block.time.start + ' - ' + game.block.time.end + ' MSK'}"></div>
+                <div data-th-unless="${game.processed.block.processed.time.end}" class="my_games-short_info-time"
+                    data-th-text="${game.processed.block.processed.time.start}"></div>
+                <div data-th-if="${game.processed.block.processed.time.end}" class="my_games-short_info-time"
+                    data-th-text="${game.processed.block.processed.time.start + ' - ' + game.processed.block.processed.time.end + ' MSK'}">
+                </div>
                 <div class="my_games-short_info-location" data-th-unless="${festival.online}">
-                    <span data-th-text="${game.location + ', '}"></span>
+                    <span data-th-text="${game.processed.location + ', '}"></span>
                     <span
-                        data-th-text="${portal.localize({'_key=myGames.misc.table', '_locale=ru'}) + ' ' + game.table}"></span>
+                        data-th-text="${portal.localize({'_key=myGames.misc.table', '_locale=ru'}) + ' ' + game.processed.table}"></span>
                 </div>
             </div>
             <div class="my_games-short_info-right">
                 <div class="my_games-short_info-name">
-                    <span data-th-text="${game.displayName}"></span>
+                    <span data-th-text="${game.content.displayName}"></span>
                     <span class="icon-arrow"></span>
                 </div>
                 <div class="my_games-short_info-desccription">
-                    <span data-th-if="${game.system.localizable}"
-                        data-th-text="${portal.localize({'_key=myGames.gameSystem.' + game.system.text, '_locale=ru'})}"></span>
-                    <span data-th-unless="${game.system.localizable}" data-th-text="${game.system.text}"></span>
-                    <span data-th-text="${game.block.displayName}"></span>
-                    <span data-th-if="${game.block.duration.hours or game.block.duration.minutes}">
+                    <span data-th-if="${game.processed.system.localizable}"
+                        data-th-text="${portal.localize({'_key=myGames.gameSystem.' + game.processed.system.text, '_locale=ru'})}"></span>
+                    <span data-th-unless="${game.processed.system.localizable}"
+                        data-th-text="${game.processed.system.text}"></span>
+                    <span data-th-text="${game.processed.block.content.displayName}"></span>
+                    <span
+                        data-th-if="${game.processed.block.processed.duration and (game.processed.block.processed.duration.hours or game.processed.block.processed.duration.minutes)}">
                         (
-                        <span data-th-if="${game.block.duration.hours > 0}"
-                            data-th-text="${game.block.duration.hours+portal.localize({'_key=myGames.misc.time.h', '_locale=ru'})}">
+                        <span data-th-if="${game.processed.block.processed.duration.hours > 0}"
+                            data-th-text="${game.processed.block.processed.duration.hours+portal.localize({'_key=myGames.misc.time.h', '_locale=ru'})}">
                         </span>
-                        <span data-th-if="${game.block.duration.minutes > 0}"
-                            data-th-text="${game.block.duration.minutes+portal.localize({'_key=myGames.misc.time.m', '_locale=ru'})}">
+                        <span data-th-if="${game.processed.block.processed.duration.minutes > 0}"
+                            data-th-text="${game.processed.block.processed.duration.minutes+portal.localize({'_key=myGames.misc.time.m', '_locale=ru'})}">
                         </span>
                         )
                     </span>
@@ -37,45 +40,46 @@
             </div>
         </div>
         <div class="my_games-long_info js-my_games-available-long_info">
-            <div class="my_games-game_img" data-th-if="${game.image}">
-                <img data-th-src="${game.image.url}" alt="game picture">
+            <div class="my_games-game_img" data-th-if="${game.processed.image}">
+                <img data-th-src="${game.processed.image.url}" alt="game picture">
             </div>
-            <div class="my_games-description" data-th-utext="${game.data.description}">
+            <div class="my_games-description" data-th-utext="${game.content.data.description}">
             </div>
             <div class="my_games-text">
                 <span class="label" data-th-text="${portal.localize({'_key=myGames.players', '_locale=ru'})}"></span>
-                <span class="value" data-th-text="${game.seatsReserved + '/' + game.data.maxPlayers}"></span>
+                <span class="value"
+                    data-th-text="${game.processed.seatsReserved + '/' + game.content.data.maxPlayers}"></span>
             </div>
             <div class="my_games-text">
                 <span class="label" data-th-text="${portal.localize({'_key=myGames.language', '_locale=ru'})}"></span>
                 <span class="value"
-                    data-th-text="${portal.localize({'_key=myGames.form.adventureLang.' + game.data.language, '_locale=ru'})}"></span>
+                    data-th-text="${portal.localize({'_key=myGames.form.adventureLang.' + game.content.data.language, '_locale=ru'})}"></span>
             </div>
             <div class="my_games-text">
                 <span class="label" data-th-text="${portal.localize({'_key=myGames.pregens', '_locale=ru'})}"></span>
                 <span class="value"
-                    data-th-text="${portal.localize({'_key=myGames.form.pregens.' + game.data.pregens, '_locale=ru'})}"></span>
+                    data-th-text="${portal.localize({'_key=myGames.form.pregens.' + game.content.data.pregens, '_locale=ru'})}"></span>
             </div>
-            <div class="my_games-text" data-th-if="${game.additionalInfo}">
+            <div class="my_games-text" data-th-if="${game.processed.additionalInfo}">
                 <span class="label"
                     data-th-text="${portal.localize({'_key=myGames.additionalInfo', '_locale=ru'})}"></span>
-                <span class="value" data-th-text="${game.additionalInfo}">
+                <span class="value" data-th-text="${game.processed.additionalInfo}">
                 </span>
             </div>
-            <div class="my_games-text" data-th-if="${game and game.players and game.players != ''}">
+            <div class="my_games-text" data-th-if="${game and game.processed.players and game.processed.players != ''}">
                 <span class="label" data-th-text="${portal.localize({'_key=myGames.players', '_locale=ru'})}"></span>
-                <span class="value" data-th-text="${game.players}">
+                <span class="value" data-th-text="${game.processed.players}">
                 </span>
             </div>
-            <div class="my_games-text" data-th-if="${game and game.table}">
+            <div class="my_games-text" data-th-if="${game and game.processed.table}">
                 <span class="label" data-th-text="${portal.localize({'_key=myGames.table', '_locale=ru'})}"></span>
-                <span class="value" data-th-text="${game.table}">
+                <span class="value" data-th-text="${game.processed.table}">
                 </span>
             </div>
             <div class="my_games-action-block">
-                <button class="my_games-link button js-my_games-edit-game" data-th-attr="data-id=${game._id}"
+                <button class="my_games-link button js-my_games-edit-game" data-th-attr="data-id=${game.content._id}"
                     data-th-text="${portal.localize({'_key=myGames.edit', '_locale=ru'})}"></button>
-                <button class="my_games-link button js-my_games-remove-game" data-th-attr="data-id=${game._id}"
+                <button class="my_games-link button js-my_games-remove-game" data-th-attr="data-id=${game.content._id}"
                     data-th-text="${portal.localize({'_key=myGames.remove', '_locale=ru'})}"></button>
             </div>
         </div>
