--- a/app/src/main/resources/site/pages/user/games/gm/addGameForm.html
+++ b/app/src/main/resources/site/pages/user/games/gm/addGameForm.html
@@ -29,7 +29,7 @@
             <div class="form-caption"
                 data-th-text="${portal.localize({'_key=myGames.form.name.caption', '_locale=ru'})}"></div>
         </div>
-        <div class="form-group">
+        <div class="form-group" data-th-if="${festival.data.requireDiscord}">
             <label for="my_games_name"
                 data-th-text="${portal.localize({'_key=myGames.form.discord', '_locale=ru'})}"></label>
             <input data-th-value="${discord.username + ':' + discord.discriminator}"
@@ -246,7 +246,7 @@
         </div>
         <input type="hidden" data-th-value="${location._id}" name="location" />
         <input type="hidden" data-th-value="${block.content._id}" name="block" />
-        <input type="hidden" data-th-value="${day.content._id}" name="block" />
+        <input type="hidden" data-th-value="${day.content._id}" name="day" />
         <input data-th-if="${game && game.content._id}" type="hidden" data-th-value="${game.content._id}" name="_id" />
     </form>
 </div>
