--- a/app/src/main/resources/site/pages/user/games/gm/addGameForm.html
+++ b/app/src/main/resources/site/pages/user/games/gm/addGameForm.html
@@ -68,7 +68,7 @@
                 data-th-classappend="${game && game.content.data.gameSystem.text && game.content.data.gameSystem.text.system != '' && game.content.data.gameSystem._selected == 'text' ? '' : 'my_games-hidden-input'}"
                 class="js-my_games-system-input my_games-system-input" data-ignore="true" />
         </div>
-        <div class="form-group">
+        <div data-th-if="${festival.online}" class="form-group">
             <label for="my_games_virtual_table"
                 data-th-text="${portal.localize({'_key=myGames.form.virtualTable', '_locale=ru'})}"></label>
             <div class="select-field">
