--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -4,124 +4,102 @@
 <head data-th-utext="${pageComponents.pagehead}"></head>
 
 <body class="kosticonnect-page landingPage">
-    <div class="modal js_loader">
-        <div class="lds-ring">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </div>
+    <div data-th-remove="tag" data-th-utext="${pageComponents.loginRegisterModal}"></div>
     <header class="kosticonnect-header">
         <div class="site_content">
             <div class="kosticonnect-header_inner">
                 <div class="kosticonnect-short_info">
-                    <div class="kosticonnect-left">
-                        <div class="kosticonnect-logo">
-                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/snake-logo.svg'})}"
-                                alt="kosticonnect " />
-                        </div>
-                        <div class="fest_date">
-                            <span class="fest_date-day">25 - 28</span>
-                            <span class="fest_date-month">февраля</span>
-                        </div>
-                    </div>
                     <div class="kosticonnect-headline">
                         <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/headline.svg'})}"
                             alt="kosticonnect " />
                     </div>
                 </div>
-                <div class="kosticonnect-where">
-                    <div class="kosticonnect-twitch">
-                        <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/twitch-logo.svg'})}"
-                            alt="kosticonnect " />
-                    </div>
-                    <div class="kosticonnect-discord">
-                        <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/discord-logo.svg'})}"
-                            alt="kosticonnect " />
-                    </div>
-                    <div class="kosticonnect-zoom">
-                        <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/zoom-logo.svg'})}"
-                            alt="kosticonnect " />
-                    </div>
-                </div>
-            </div>
-            <div class="kosticonnect-header_insert">
-                <div class="k_gdp-img_decor">
-                    <div class="k_gdp-img_wrap">
-                        <img data-th-if="${game.bigImage and !game.bigImage.placeholder}"
-                            data-th-src="${game.bigImage.url}">
-                        <img data-th-if="${(!game.bigImage or game.bigImage.placeholder) and game.system and game.system.localizable}"
-                            data-th-src="${portal.assetUrl({'_path=images/gameSystems/' + game.system.text + '.jpg'})}">
-                        <img data-th-if="${(!game.bigImage or game.bigImage.placeholder) and game.system and !game.system.localizable}"
-                            data-th-src="${portal.assetUrl({'_path=images/gameSystems/default.jpg'})}">
-                        <span data-th-if="${game.data.exclusive}" class="k_games-exclusive_game"><i
-                                class="icon-rock"></i> Экслюзивная игра</span>
-                    </div>
-                </div>
             </div>
         </div>
     </header>
-    <main data-th-attr="data-id=${game._id}" class="kosticonnect-wrap k_games-wrap js_game-id">
+    <main data-th-attr="data-id=${game.content._id}" class="kosticonnect-wrap k_games-wrap js_game-id">
+        <div class="kosticonnect-header_insert">
+            <div class="k_gdp-img_decor">
+                <div class="k_gdp-img_wrap">
+                    <img data-th-if="${game.processed.bigImage and !game.processed.bigImage.placeholder}"
+                        data-th-src="${game.processed.bigImage.url}">
+                    <img data-th-if="${(!game.processed.bigImage or game.processed.bigImage.placeholder) and game.processed.system and game.processed.system.localizable}"
+                        data-th-src="${portal.assetUrl({'_path=images/gameSystems/' + game.processed.system.text + '.jpg'})}">
+                    <img data-th-if="${(!game.processed.bigImage or game.processed.bigImage.placeholder) and game.processed.system and !game.processed.system.localizable}"
+                        data-th-src="${portal.assetUrl({'_path=images/gameSystems/default.jpg'})}">
+                    <span data-th-if="${game.content.data.exclusive}" class="k_games-exclusive_game"><i
+                            class="icon-rock"></i> Экслюзивная игра</span>
+                </div>
+            </div>
+        </div>
         <div class="k_games-gdp site_content">
             <div class="k_gdp-left_col">
-                <h5 data-th-if="${game.system.localizable}" class="k_gdp-system_name"
-                    data-th-text="${portal.localize({'_key=myGames.gameSystem.' + game.system.text, '_locale=ru'})}">
+                <h5 data-th-if="${game.processed.system.localizable}" class="k_gdp-system_name"
+                    data-th-text="${portal.localize({'_key=myGames.gameSystem.' + game.processed.system.text, '_locale=ru'})}">
                 </h5>
-                <h5 data-th-unless="${game.system.localizable}" class="k_gdp-system_name"
-                    data-th-text="${game.system.text}">
+                <h5 data-th-unless="${game.processed.system.localizable}" class="k_gdp-system_name"
+                    data-th-text="${game.processed.system.text}">
                 </h5>
-                <h1 class="k_gdp-title kosticonnect-title" data-th-text="${game.displayName}"></h1>
-                <div class="k_gdp-desc" data-th-utext="${game.data.description}"></div>
+                <h1 class="k_gdp-title kosticonnect-title" data-th-text="${game.content.displayName}"></h1>
+                <div class="k_gdp-desc" data-th-utext="${game.content.data.description}"></div>
             </div>
             <div class="k_gdp-right_col">
-                <div class="k_gdp-info" data-th-if="${game.master}">
+                <div class="k_gdp-info" data-th-if="${game.processed.master}">
                     <div class="k_gdp-label">ВЕДУЩИЙ</div>
-                    <div class="k_gdp-value" data-th-utext="${game.master.displayName}"></div>
+                    <div class="k_gdp-value" data-th-utext="${game.processed.master.displayName}"></div>
                 </div>
                 <div class="k_gdp-info">
                     <div class="k_gdp-label">ВРЕМЯ</div>
                     <div class="k_gdp-value">
-                        <span data-th-text="${game.block.dayName + ', '}"></span>
-                        <span data-th-text="${game.block.date}"></span>
-                        <span data-th-text="${game.block.monthName}"></span>
-                        <span data-th-if="${game.block.time.end}"
-                            data-th-text="${game.block.time.start + ' - ' + game.block.time.end}">
+                        <span data-th-text="${game.processed.block.processed.dayName + ', '}"></span>
+                        <span data-th-text="${game.processed.block.processed.date}"></span>
+                        <span data-th-text="${game.processed.block.processed.monthName}"></span>
+                        <span data-th-if="${game.processed.block.processed.time.end}"
+                            data-th-text="${game.processed.block.processed.time.start + ' - ' + game.processed.block.processed.time.end}">
                         </span>
                     </div>
                 </div>
                 <div class="k_gdp-info">
                     <div class="k_gdp-label">ТЕМА</div>
                     <div class="k_gdp-value">
-                        <span data-th-unless="${game.block.time.end}" data-th-text="${game.block.time.start}"></span>
+                        <span data-th-unless="${game.processed.block.processed.time.end}"
+                            data-th-text="${game.processed.block.processed.time.start}"></span>
                         <span
-                            data-th-utext="${portal.localize({'_key=myGames.theme.' + game.data.theme, '_locale=ru'})}"></span>
+                            data-th-utext="${portal.localize({'_key=myGames.theme.' + game.content.data.theme, '_locale=ru'})}"></span>
                     </div>
                 </div>
+                <!--
                 <div class="k_gdp-info">
                     <div class="k_gdp-label">ЯЗЫК ПРОВЕДЕНИЯ</div>
                     <div class="k_gdp-value"
-                        data-th-text="${portal.localize({'_key=myGames.form.adventureLang.' + game.data.language, '_locale=ru'})}">
+                        data-th-text="${portal.localize({'_key=myGames.form.adventureLang.' + game.content.data.language, '_locale=ru'})}">
                     </div>
+                </div>
+                -->
+                <div class="k_gdp-info" data-th-if="${game.processed.table != ''}">
+                    <div class="k_gdp-label">НОМЕР ИГРЫ</div>
+                    <div class="k_gdp-value" data-th-utext="${game.processed.table}"></div>
                 </div>
                 <div class="k_gdp-info">
                     <div class="k_gdp-label">СОЗДАНИЕ ПЕРСОНАЖЕЙ</div>
                     <div class="k_gdp-value"
-                        data-th-text="${portal.localize({'_key=myGames.form.pregens.' + game.data.pregens, '_locale=ru'})}">
+                        data-th-text="${portal.localize({'_key=myGames.form.pregens.' + game.content.data.pregens, '_locale=ru'})}">
                     </div>
                 </div>
-                <div class="k_gdp-info" data-th-if="${game.additionalInfo != ''}">
+                <div class="k_gdp-info" data-th-if="${game.processed.additionalInfo != ''}">
                     <div class="k_gdp-label">ДОПОЛНИТЕЛЬНО</div>
-                    <div class="k_gdp-value" data-th-utext="${game.additionalInfo}"></div>
+                    <div class="k_gdp-value" data-th-utext="${game.processed.additionalInfo}"></div>
                 </div>
             </div>
             <div class="k_gdp-sign_up">
+                <!--
                 <form class="k_gdp-sign_up-step_1 js_game-sign-up-step-1">
-                    <div class="form-group" data-th-unless="${user and user.data and user.data.firstName}">
-                        <input class="js_get-user-data" name="firstName" placeholder="Ваше им'я" required>
+                    <div class="form-group"
+                        data-th-unless="${user and user.content.data and user.content.data.firstName}">
+                        <input class="js_get-user-data" name="firstName" placeholder="Ваше имя" required>
                     </div>
                     <div class="form-group"
-                        data-th-unless="${user and user.data and (user.data.kosticonnect2021 or user.roles.gameMaster)}">
+                        data-th-unless="${user and user.content.data and (user.content.data.kosticonnect2021 or user.data.roles.gameMaster)}">
                         <input class="js_get-user-data" name="ticket" placeholder="Номер билета" required>
                     </div>
                     <div class="k_gdp-agreement form-group">
@@ -135,6 +113,7 @@
                     <a data-th-href="${discordUrl}" class="button social_login-discord" name="discord"
                         placeholder="discord"> Залогиньтесь через Дискорд</a>
                 </div>
+                -->
                 <div class="k_gdp-signed" data-th-if="${gameSigned}">
                     <div class="k_games-time_title">Вы уже записаны на эту игру.</div>
                     <button data-step="init"
@@ -146,7 +125,7 @@
                         class="kosticonnect-button primary k_gdp-sign_up-btn js_sign-up-for-game">ЗАПИСАТЬСЯ НА
                         ИГРУ</button>
                     <a class="kosticonnect-button inverted k_gdp-back icon-back-arrow"
-                        href="/kosticonnect/games/"><span>
+                        href="https://www.kostirpg.com/kostyashki-moskva/igry"><span>
                             Назад к списку</span></a></div>
             </div>
         </div>
