--- a/app/src/main/resources/site/pages/games/gamesBlock.html
+++ b/app/src/main/resources/site/pages/games/gamesBlock.html
@@ -1,44 +1,53 @@
-<div class="k_games-day_block" data-th-each="day : ${days}">
-    <h2 class="k_games-title kosticonnect-title"
-        data-th-text="${day.dayName + ' ' + day.date + ' ' + day.monthName + ' | ' + day.displayName}">
-    </h2>
-    <div class="k_games-time_block" data-th-each="block : ${day.blocks}" data-th-if="${block.games.size > 0}">
-        <h3 class="k_games-time_title">
-            <span data-th-if="${block.time.end}" data-th-text="${block.time.start + ' - ' + block.time.end}"></span>
-            <span data-th-unless="${block.time.end}" data-th-text="${block.time.start}"></span>
-            <span>MSK</span>
-        </h3>
-        <ul class="k_games-list">
-            <li class="k_games-item" data-th-each="game : ${block.games}">
-                <a class="k_games-item_link" data-th-href="${game.url}">
-                    <span class="k_games-img_wrap">
-                        <img data-th-if="${game.image and !game.image.placeholder}" data-th-src="${game.image.url}">
-                        <img data-th-if="${(!game.image or game.image.placeholder) and game.system and game.system.localizable}"
-                            data-th-src="${portal.assetUrl({'_path=images/gameSystems/' + game.system.text + '.jpg'})}">
-                        <img data-th-if="${(!game.image or game.image.placeholder) and game.system and !game.system.localizable}"
-                            data-th-src="${portal.assetUrl({'_path=images/gameSystems/default.jpg'})}">
-                        <span class="k_games-seats">
-                            <span>места</span>
-                            <span data-th-text="${game.seatsReserved + '/' + game.data.maxPlayers}"></span>
-                        </span>
-                        <span data-th-if="${game.data.exclusive}" class="k_games-exclusive_game"><i
-                                class="icon-rock"></i> Экслюзивная игра</span>
+<div class="k_games-day_block">
+    <!--
+        <div class="k_games-day_block" data-th-each="day : ${days}">
+        TODO: uncomment and make days correct
+        <h2 class="k_games-title kosticonnect-title"
+            data-th-text="${day.dayName + ' ' + day.date + ' ' + day.monthName + ' | ' + day.displayName}">
+        </h2>
+    -->
+    <!--<div class="k_games-time_block" data-th-each="block : ${day.blocks}" data-th-if="${block.games.size > 0}">-->
+    <!--
+            TODO: uncomment and make blocks correct
+            <h3 class="k_games-time_title">
+                <span data-th-if="${block.time.end}" data-th-text="${block.time.start + ' - ' + block.time.end}"></span>
+                <span data-th-unless="${block.time.end}" data-th-text="${block.time.start}"></span>
+                <span>MSK</span>
+            </h3>
+        -->
+    <ul class="k_games-list">
+        <li class="k_games-item" data-th-each="game : ${games}">
+            <a class="k_games-item_link" data-th-href="${game.processed.url}">
+                <span class="k_games-img_wrap">
+                    <img data-th-if="${game.processed.image and !game.processed.image.placeholder}"
+                        data-th-src="${game.processed.image.url}">
+                    <img data-th-if="${(!game.processed.image or game.processed.image.placeholder) and game.processed.system and game.processed.system.localizable}"
+                        data-th-src="${portal.assetUrl({'_path=images/gameSystems/' + game.processed.system.text + '.jpg'})}">
+                    <img data-th-if="${(!game.processed.image or game.processed.image.placeholder) and game.processed.system and !game.processed.system.localizable}"
+                        data-th-src="${portal.assetUrl({'_path=images/gameSystems/default.jpg'})}">
+                    <span class="k_games-seats">
+                        <span>места</span>
+                        <span
+                            data-th-text="${game.processed.seatsReserved + '/' + game.content.data.maxPlayers}"></span>
                     </span>
-                    <h3 class="k_games-game_name" data-th-text="${game.displayName}"></h3>
-                    <h4 class="k_games-game_system" data-th-if="${game.system.localizable}"
-                        data-th-text="${portal.localize({'_key=myGames.gameSystem.' + game.system.text, '_locale=ru'})}">
-                    </h4>
-                    <h4 data-th-unless="${game.system.localizable}" class="k_games-game_system"
-                        data-th-text="${game.system.text}">
-                    </h4>
-                    <span class="k_games-game_desc_wrap">
-                        <span class="k_games-game_desc" data-th-utext="${game.intro}"></span>
-                    </span>
-                    <span class="k_games-game_actions">
-                        <span class="k_games-link_more" data-th-href="${game.url}">Узнать больше</span>
-                    </span>
-                </a>
-            </li>
-        </ul>
-    </div>
+                    <span data-th-if="${game.content.data.exclusive}" class="k_games-exclusive_game"><i
+                            class="icon-rock"></i> Экслюзивная игра</span>
+                </span>
+                <h3 class="k_games-game_name" data-th-text="${game.content.displayName}"></h3>
+                <h4 class="k_games-game_system" data-th-if="${game.processed.system.localizable}"
+                    data-th-text="${portal.localize({'_key=myGames.gameSystem.' + game.processed.system.text, '_locale=ru'})}">
+                </h4>
+                <h4 data-th-unless="${game.processed.system.localizable}" class="k_games-game_system"
+                    data-th-text="${game.processed.system.text}">
+                </h4>
+                <span class="k_games-game_desc_wrap">
+                    <span class="k_games-game_desc" data-th-utext="${game.processed.intro}"></span>
+                </span>
+                <span class="k_games-game_actions">
+                    <span class="k_games-link_more" data-th-href="${game.processed.url}">Узнать больше</span>
+                </span>
+            </a>
+        </li>
+    </ul>
+    <!--</div>-->
 </div>
