--- a/app/src/main/resources/site/pages/games/games.html
+++ b/app/src/main/resources/site/pages/games/games.html
@@ -16,6 +16,7 @@
                 </div>
             </div>
         </div>
+        <div class="js_header-user hidden" data-th-attr="data-userid=${user.content._id}"></div>
     </header>
     <main class="kosticonnect-wrap k_games-wrap">
         <div class="kosticonnect-content k_games">
