--- a/app/src/main/resources/site/pages/moscowLanding/moscowLanding.html
+++ b/app/src/main/resources/site/pages/moscowLanding/moscowLanding.html
@@ -20,16 +20,14 @@
         <div class="kosticonnect-hero">
             <div class="hero_banner kmg-hero-banner">
                 <div class="hero_banner-video_wrap">
-                    <img data-th-src="${portal.assetUrl({'_path=images/moscow/bg001.jpg'})}"
+                    <img data-th-src="${portal.assetUrl({'_path=images/moscow/bg006.jpg'})}"
                         class="hero_banner-video  banner-img" alt="">
 
                 </div>
                 <div class="hero_banner-content">
                     <div class="site_content">
                         <h2 class="hero_banner-title kosticonnect-title">
-                            <div class="animate-typing" data-animate-loop="true" data-type-speed="100"
-                                data-type-delay="100" data-remove-speed="50" data-remove-delay="1000"
-                                data-cursor-speed="200" data-animate-index="0">Костяшки москва Meet Up</div>
+                            <div>Костяшки москва Meet Up</div>
                             17 июля в 13:00
                         </h2>
                         <div class="hero_banner-actions">
@@ -59,7 +57,7 @@
             <div class="site_content">
                 <div class="attend js_attend-block">
                     <div class="attend-img_wrap">
-                        <img data-th-src="${portal.assetUrl({'_path=images/moscow/bg003.jpg'})}"
+                        <img data-th-src="${portal.assetUrl({'_path=images/moscow/bg005.jpg'})}"
                             alt="kosticonnect backstage img">
                     </div>
                     <div class="attend-content">
@@ -136,40 +134,12 @@
 
                 </div>
                 <div class="telegram_chat">
-                    <h2 class="kosticonnect-title">ТЕЛЕГРАМ-ЧАТ ФЕСТИВАЛЯ</h2>
+                    <h2 class="kosticonnect-title">ТЕЛЕГРАМ-ЧАТ МИТАПА</h2>
                     <a href="https://t.me/kosti_msk" class="kosticonnect-button primary">ПРИСОЕДИНИТЬСЯ</a>
                 </div>
             </div>
         </div>
     </main>
-    <footer class="fest_contacts">
-        <div class="site_content">
-            <div class="k_social social">
-                <h2 class="k_social-title kosticonnect-title">
-                    СОЦСЕТИ ФЕСТИВАЛЯ
-                </h2>
-                <div class="social-list social-list__sides_align">
-                    <a href="https://www.facebook.com/vecherniyekosti" class="social-link facebook"
-                        title="Facebook"></a>
-                    <a href="https://vk.com/vecherniyekosti" class="social-link vk" title="VK"></a>
-                    <a href="https://twitter.com/vecherniyekosti" class="social-link twitter hidden"
-                        title="Twitter"></a>
-                    <a href="https://www.youtube.com/channel/UCETKVT-Uj-gAqdSTd2YNaMg" class="social-link youtube"
-                        title="Youtube"></a>
-                    <a href="https://www.instagram.com/vecherniye_kosti" class="social-link instagram"
-                        title="Instagram"></a>
-                    <a href="https://www.twitch.tv/vecherniyekosti" class="social-link twitch" title="Twitch"></a>
-                    <a href="https://discord.gg/VfDthGK" class="social-link discord" title="Discord"></a>
-                    <a href="https://t.me/vecherniyekosti" class="social-link telegram" title="Telegram"></a>
-                </div>
-            </div>
-            <div class="about_us">
-                <h3 class="about_us-title">ОБРАЩАЙТЕСЬ ПО ЛЮБЫМ ВОПРОСАМ:</h3>
-                <p><a class="about_us-link" href="mailto:info@kostirpg.com">info@kostirpg.com</a></p>
-                <p><a class="about_us-link" href="tel:+380662098750">+380662098750</a></p>
-            </div>
-        </div>
-    </footer>
     <div data-th-utext="${pageComponents.footer}" data-th-remove="tag"></div>
 </body>
 
