js classes fixes

--- a/app/src/main/resources/site/pages/moscowLanding/moscowLanding.html
+++ b/app/src/main/resources/site/pages/moscowLanding/moscowLanding.html
@@ -32,18 +32,15 @@
                         </h2>
                         <div class="hero_banner-actions">
                             <a href=" https://t.me/kan_sin" target="_blank"
-                                class="hero_banner-tickets kosticonnect-button primary js_scroll"
-                                data-direction="js_tickets-block">
+                                class="hero_banner-tickets kosticonnect-button primary">
                                 Билеты в телеграм
                             </a>
                             <a href="https://vk.com/mcksin" target="_blank"
-                                class="hero_banner-tickets kosticonnect-button secondary js_scroll"
-                                data-direction="js_attend-block">
+                                class="hero_banner-tickets kosticonnect-button secondary">
                                 Билеты в вк
                             </a>
-                            <a href="https://www.kostirpg.com/kostyashki-moskva/igry" target="_blank"
-                                class="hero_banner-participate kosticonnect-button secondary js_scroll"
-                                data-direction="js_attend-block">
+                            <a href="https://www.kostirpg.com/kostyashki-moskva/igry"
+                                class="hero_banner-participate kosticonnect-button secondary">
                                 Список игр
                             </a>
                         </div>
@@ -57,11 +54,11 @@
             <div class="site_content">
                 <div class="attend js_attend-block">
                     <div class="attend-img_wrap">
-                        <img data-th-src="${portal.assetUrl({'_path=images/moscow/bg005.jpg'})}"
+                        <img data-th-src="${portal.assetUrl({'_path=images/moscow/bg007.jpg'})}"
                             alt="kosticonnect backstage img">
                     </div>
                     <div class="attend-content">
-                        <h2 class="attend-title kosticonnect-title">Что такое наш МИТ АП??</h2>
+                        <h2 class="attend-title kosticonnect-title">Что такое наш МИТАП?</h2>
                         <p class="attend-disc"> Это куча игротек, где каждый сможет найти игру по своему вкусу. В этот
                             раз планируем еще больше игр, а также зону для общих посиделок и разговоров. Так что
                             приходи, не стесняйся, вливайся в дружный коллектив под эгидой Вечерних Костей!</p>
@@ -109,7 +106,7 @@
                         </script>
                     </div>
                     <div class="attend-content">
-                        <h2 class="attend-title kosticonnect-title">О Meet Up</h2>
+                        <h2 class="attend-title kosticonnect-title">О МИТАПЕ</h2>
 
                         <ol class="attend-disc">
                             <li><b>Дата и время: </b>17 июля 13:00</li>
