--- a/app/src/main/resources/site/pages/moscowLanding/moscowLanding.html
+++ b/app/src/main/resources/site/pages/moscowLanding/moscowLanding.html
@@ -8,10 +8,12 @@
         <div class="site_content">
             <div class="kosticonnect-header_inner">
                 <div class="kosticonnect-short_info">
-                    <div class="kosticonnect-headline">
-                        <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/headline.svg'})}"
-                            alt="kosticonnect " />
-                    </div>
+                    <a href="/kostyashki-moskva">
+                        <div class="kosticonnect-headline">
+                            <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/headline.svg'})}"
+                                alt="kosticonnect " />
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
