--- a/app/src/main/resources/site/pages/user/games/shared/availableComp.html
+++ b/app/src/main/resources/site/pages/user/games/shared/availableComp.html
@@ -6,7 +6,7 @@
                 <div data-th-unless="${game.processed.block.processed.time.end}" class="my_games-short_info-time"
                     data-th-text="${game.processed.block.processed.time.start}"></div>
                 <div data-th-if="${game.processed.block.processed.time.end}" class="my_games-short_info-time"
-                    data-th-text="${game.processed.block.processed.time.start + ' - ' + game.processed.block.processed.time.end + ' MSK'}">
+                    data-th-text="${game.processed.block.processed.time.start + ' - ' + game.processed.block.processed.time.end + ''}">
                 </div>
                 <div class="my_games-short_info-location" data-th-unless="${festival.online}">
                     <span data-th-text="${game.processed.location + ', '}"></span>
